<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight" />

        <ImageView
            android:id="@+id/DecWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left" />

        <EditText
            android:id="@+id/Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:numeric="integer"/>

        <ImageView
            android:id="@+id/IncWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bloodPressure" />

        <ImageView
            android:id="@+id/DecSys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left"/>

        <EditText
            android:id="@+id/Sys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number" android:numeric="integer" >

        </EditText>

        <ImageView
            android:id="@+id/IncSys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/systolic"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank" />

        <ImageView
            android:id="@+id/DecDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left" />

        <EditText
            android:id="@+id/Dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:numeric="integer"/>

        <ImageView
            android:id="@+id/IncDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diastolic"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

</TableLayout>